# ddaugNER

./: .gitignore  README.md  extract_dekker_metrics.py  extract_metrics.py  fix_ner.py  lexical_overlap.py  original_vs_fixed_ner.py  plot_metrics.py  pyproject.toml  requirements.txt  setup_dekker_dataset.py  tes_annotate_specific_errors.py  tes_better_recalled.py  tes_specific_errors.py  train.py
ddaugner/: book_groups.py  ner_utils.py  predict.py  record.py  score.py  train.py  utils.py
ddaugner/datas/: __init__.py  aug.py  datas.py  dekker.py
ddaugner/resources/: conll_entities.py  conll_loc.json  conll_misc.json  conll_org.json  conll_per.json  dekker.py  dekker_fantasy.json  french_names.json  french_names.py  morrowind.py  morrowind_locs.json  morrowind_names.json  the_elder_scrolls.py  wgold.json  wgold_names.py  word_names.json  word_names.py
docs/: conf.py  index.rst
ner/new/: AGameOfThrones.conll  AGameOfThrones.conll.fixed  AssassinsApprentice.conll  AssassinsApprentice.conll.fixed  BlackPrism.conll  BlackPrism.conll.fixed  Elantris.conll  Elantris.conll.fixed  GardensOfTheMoon.conll  GardensOfTheMoon.conll.fixed  HarryPotter.conll  HarryPotter.conll.fixed  Magician.conll  Magician.conll.fixed  Mistborn.conll  Mistborn.conll.fixed  StormFront.conll  StormFront.conll.fixed  TheBlackCompany.conll  TheBlackCompany.conll.fixed  TheBladeItself.conll  TheBladeItself.conll.fixed  TheColourOfMagic.conll  (+15 more)
tests/: strategies.py  test.conll  test_aug.py  test_conll.py  test_datas.py  test_extract_dekker_metrics.py  test_ner_utils.py  test_score.py  test_utils.py
(+44 files in other folders)
